--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.2",
+    "fabric": "^4.3.1",
+    "fabricjs-react": "^1.0.8",
     "file-saver": "^1.3.2",
     "files-download-zip": "^3.1.1",
     "jszip": "^3.6.0",
