--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.3",
+    "typeface-dosis": "^1.1.13",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
